syntax = "proto3";

package nextone.identity;
option csharp_namespace = "NextOne.Protobuf.Identity";

import "google/protobuf/wrappers.proto";

service GrpcIdentityService {
  rpc SayHello (HelloRequest) returns (HelloReply);
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

message Error {
	string message = 1;
}