syntax = "proto3";

package nextone.master;
option csharp_namespace = "NextOne.Protobuf.Master";

import "common/common.proto";
//import "google/protobuf/wrappers.proto";

service GrpcMasterService {
  rpc SayHello (nextone.common.HelloRequest) returns (nextone.common.HelloReply);

  rpc GetUsersByIds (GetUsersByIdsRequest) returns (GetUsersByIdsResponse);
}

message UserDto{
	string userId = 1;
	string userName = 2;
	string userEmail = 3;
	bool isActive = 4;
}

message GetUsersByIdsRequest{
	repeated string userIds = 1;
}

message GetUsersByIdsResponse{
	repeated UserDto Users = 1;
}

